feat(security): enforce 10k node limit to prevent OOM and DoS vulnerabilities